# pbp-23-ganjil

./: .gitignore  README.md
lab1-mvt/: pyproject.toml
lab1-mvt/app/: urls.py
lab1-mvt/wishlist/: urls.py  views.py
lab2-datadelivery/: pyproject.toml
lab2-datadelivery/app/: settings.py
lab2-datadelivery/wishlist/: views.py
lab3-formauthsessioncookie/: pyproject.toml
lab3-formauthsessioncookie/mywatchlist/: models.py  urls.py  views.py
lab3-formauthsessioncookie/wishlist/: models.py  urls.py  views.py
lab6_introflutter/: README.md  pubspec.yaml
lab6_introflutter/linux/: CMakeLists.txt  my_application.cc
lab6_introflutter/test/: widget_test.dart
lab6_introflutter/web/: index.html  manifest.json
lab6_introflutter/windows/: CMakeLists.txt
tp3-implementasi/: pyproject.toml
tp3-implementasi/app/: settings.py  urls.py
tp3-implementasi/wishlist/: urls.py
tp4-formauth/: pyproject.toml
tp4-formauth/main/: settings.py  urls.py
tp4-formauth/todolist/: models.py  urls.py  views.py
tp5-styling/: pyproject.toml
tp5-styling/main/: settings.py
tp5-styling/todolist/: views.py
tp5-styling/todolist/migrations/: 0001_initial.py
tp5-styling/todolist/templates/: base.html  home.html  login.html  register.html
tp6-jsnajax/main/: urls.py
tp6-jsnajax/todolist/: urls.py  views.py
tp7_basicelement/: README.md  pubspec.yaml
tp7_basicelement/linux/: CMakeLists.txt  my_application.cc
tp7_basicelement/test/: widget_test.dart
tp7_basicelement/web/: index.html  manifest.json
tp7_basicelement/windows/: CMakeLists.txt
(+37 files in other folders)
