[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["elskow <elskow@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}

[tool.poetry.extras]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"